# demos

./: .gitignore  CODEOWNERS  README.md
.github/: renovate.json5
.github/workflows/: renovate.yaml  security-scan.yml
2022-week-16/security-ci-cd/: README.md  package.json  slides.mdx
2022-week-20/security-ci-cd/: README.md  package.json  slides.mdx
2022W34/pubsub-to-bigquery/: .env.yaml.example  .gitignore  README.md  Taskfile.yaml  buf.gen.yaml  docker-compose.yaml
2022W34/pubsub-to-bigquery/data/: full-json.ce.proto.json  full-json.ce.proto.txt  full-json.ce.pubsub_push.json  full-proto.ce.proto.txt
2022W34/pubsub-to-bigquery/docker-compose/: Dockerfile  Dockerfile.demo  docker-lock.json  go.mod  go.sum  tools.go
2022W34/pubsub-to-bigquery/terraform/: .gitignore  .terraform.lock.hcl  bigquery.tf  locals.tf  providers.tf  psbq_cloudevents.tf  psbq_schemaless.tf  terraform.tfvars.example  variables.tf  versions.tf
2022W36/grpc_healhcheck/: README.md
2022W36/uri_urn_url/: README.md
2023-week-17/dbt/dbt-demo-2023-04-27/: package.json  (+2 more)
2023-week-43/arun/: index.md
2023W02/protobuf-validation/: .dockerignore  .editorconfig  .gitignore  .golangci.yml  CODE-README.md  Makefile  README.md  buf.gen.yaml  default.env  devtools.env  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  modd.conf  tools.go
2024-week-15/bendik-connectrpc/: Makefile  README.md  buf.gen.yaml  go.mod  go.sum
2024-week-19/: redundancy-in-sms-providers.md
2024-week-19/redundancy-in-sms-providers/: redundancy-in-sms-providers.md  sms-redundancy.pptx
2024-week-37/go-errgroup/: README.md  expensivecalls.go  go.mod  main.go
2025-week-13/bendik-go-custom-errors/: README.md  go.mod
2025-week-19/bendik-go-custom-errors/: README.md
2025-week-23/bendik-ab-testing/: README.md  go.mod
2026-week-5/: go.mod  main.go
2026-week-7/: errgroup.go  go.mod  main.go  main_test.go  semaphore.go  workerpool.go
demo-210429-owl/: .gitignore  README.md  coop-example-a.ttl  coop-example-b.ld.yaml  coop-ontology.owl.ttl  makefile  poetry.toml  pyproject.toml
demo-210429-owl/ext/: dataprotection-rdf.owl.ttl  foaf.owl.ttl  rdau.owl.ttl
gcp-to-azure-auth/: README.md  gcptoazureauth.go  go.mod  go.sum
gcp-to-azure-auth/config/: config.go
week23/: README.md
week23/bdd-api/: README.md  api_actor_test.go  go.mod  go.sum
week23/python-typing/: .coveragerc  .flake8  .gitignore  MAINTAINING.md  README.md  makefile  mypy.ini  pyproject.toml  pytest.ini
week23/python-typing/tests/: test_pydantic.py  test_typing.py
week23/selenium-webdriver/: README.md  coop_test.py  requirements.txt  scraping.py
week40/cdk8s/: cdk8s.yaml  go.mod  go.sum  main.go  readme.md
week40/sapdemo/: Dockerfile  README.md  demo.jcoDestination  install-sapjco3.sh  pom.xml  run-docker.sh  run.sh
week44/docker-lock/: README.md  makefile
week48/cloud-sql-demo/: .editorconfig  docker-compose.yaml  package.json  slides.md
week48/editorconfig/: README.md
week48/govfs/: .editorconfig  .gitignore  .golangci.yml  Dockerfile.devtools  Makefile  README.md  docker-compose.yaml  docker-lock.json  go.mod  go.sum  golangci-lint-1.43.0-linux-amd64.tar.gz.sha256sum  tools.go
(+393 files in other folders)
