# https://python-poetry.org/docs/pyproject/
# https://www.python.org/dev/peps/pep-0621/
[tool.poetry]
name = "aucampia.demo.typing"
version = "0.1.0-alpha.0"
description = ""
authors = []
readme = "README.md"
packages = [
    {include = "aucampia", from = "src"}
]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.6.2"
click = "^8.0.0"
dataclasses = { version = "^0.8", python = ">=3.6,<3.7" }
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
typer = "^0.24.0"
jsonschema = "^3.2.0"
PyYAML = "^6.0.0"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
coverage = "^7.0.0"
flake8 = "^7.0.0"
flake8-black = "^0.4.0"
flake8-bugbear = "^25.0.0"
flake8-isort = "^7.0.0"
invoke = "^2.0.0"
isort = "^8.0.0"
mypy = "^1.0.0"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-subtests = "^0.15.0"
typing-extensions = "^3.10.0"

[build-system]
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
